rke-monitoring/config/default-network-ingress-monitoring-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-ingress-monitoring-policy
  namespace: kube-system
spec:
  ingress:
  - ports:
    - port: 10254
      protocol: TCP
  podSelector:
    matchLabels:
      app: rke2-ingress-nginx 
  policyTypes:
  - Ingress
